<resources>
    <string name="app_name">Control y Seguimiento Médico</string>
    <string name="label_login">Inicio de Sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aun no te has registrado?</string>
    <string name="label_password_forgotten">¿Has olvidado tu contraseña?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombres</string>
    <string name="btn_register">Confirmar Registro</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointment">Reservar Cita</string>
    <string name="btn_my_appointments">Mis Citas</string>
    <string name="btn_log_out">Cerrar Sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar Cita</string>
    <string name="label_description">Descripción</string>
    <string name="label_speciality">Especialidad</string>
    <string name="label_type">Tipo de Cita</string>
    <string name="type_1">Consulta Médica</string>
    <string name="type_2">Revisión de Exámenes Clínicos</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_scheduled_date">Fecha para la Cita</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita médica %1$d</string>
    <string name="item_appointment_date">"Atención el día %1$s"</string>
    <string name="item_appointment_time">"A las %1$s"</string>
    <string name="label_my_appointments">Mis citas médicas</string>
    <string name="press_back_again">Presione una vez más para salir</string>
    <string name="dialog_create_appointment_exit_title">Estás seguro que deseas salir?</string>
    <string name="dialog_create_appointment_exit_title_message">Si abandonas el registro, los datos que habías ingresado se perderán.</string>
    <string name="dialog_create_appointment_exit_positive_button">Si, salir</string>
    <string name="dialog_create_appointment_exit_negative_button">Continuar registro</string>
    <string name="validate_appointment_description">La descripción es demasiado corta</string>
    <string name="label_scheduled_time">Hora de la Cita Médica</string>
    <string name="label_confirm_appointment_data">Datos de la Cita</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">Es necesario definir una hora para la cita.</string>
    <string name="error_loading_specialties">Ocurrió un problema al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrió un problema al cargar los médicos</string>
    <string name="error_loading_hours">No se han podido cargar las horas</string>
    <string name="label_select_doctor_and_date">Seleccione un médico y una fecha, para ver sus horas disponibles</string>
    <string name="label_not_available_hours">No se encontraron horas disponibles para el médico en el dia seleccionado</string>
    <string name="error_login_response">Se obtuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por favor ingrese un correo y contraseña</string>
    <string name="item_appointment_created_at">Esta cita se registro el día %1$s con la siguiente descripción</string>
    <string name="create_appointment_success">Cita Registrada Correctamente</string>
    <string name="create_appointment_error">Ocurrió un error inesperado registrando la cita médica</string>
    <string name="default_notification_channel_id">default_channel</string>
    
    
    <string name="btn_reminder_medicine">Recordatorio Medicina</string>

    <string name="app_name_reminder">Recordatorio de Medicamentos</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_load_sample_data">Cargar Data</string>

    <string name="snackbar_msg_sample_data_loaded">%d elementos cargados&#8230;</string>

    <string name="create_reminder">Crear Recordatorio</string>
    <string name="edit_reminder">Editar Recordatorio</string>
    <string name="name">Nombres</string>
    <string name="type">Tipo</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="medicine_name">Medicina a Administrar.</string>
    <string name="description">Descripción del tratamiento.</string>
    <string name="note">Nota Adicional.</string>
    <string name="select_time">Seleccione la Hora</string>
    <string name="no_reminders">No existen recordatorios.</string>

    <string name="days">Dias</string>
    <string name="other">Other</string>
    <string name="action_delete_data">Borrar Data</string>
    <string name="undo">Undo</string>
    <string name="administered">Medicina Suministrada</string>
    <string name="time">Hora</string>
    <string name="action_delete_reminder">Eliminar Recordatorio</string>
    <string name="unknown_error">Ha ocurrido un error.</string>
    <string name="nothing_to_delete">No hay nada que borrar.</string>
    <string name="name_required">El nombre es un campo obligatorio.</string>
    <string name="type_required">El tipo es un campo obligatorio.</string>
    <string name="medicine_required">La medicina es un campo obligatorio.</string>
    <string name="days_required">Debes elegir al menos un día.</string>
    <string name="time_required">La hora es un campo obligatorio.</string>
    <string name="save_failed">El recordatorio no se creo. Intente otra vez.</string>
    <string name="update_failed">No se pudo actualizar el recordatorio.</string>
    <string name="delete_failed">No se pudo eliminar el recordatorio.</string>
    <string name="sample_data_loaded_title">Data Importada</string>
    <string name="sample_data_loaded_message">Insertó la data de muestra en la app.</string>
    <string name="sample_data_loaded_big_text">Ahora hay 4 recordatorios cargados en la base de datos de su dispositivo.</string>
    <string name="manage_channels">Administrar Canales</string>
    <string name="sample_data_deleted_title">Data Eliminada</string>
    <string name="sample_data_deleted_message">Se han eliminado los datos de la aplicación.</string>
    <string name="sample_data_deleted_big_text">Los registros de la base de datos se han eliminado para todos los recordatorios.</string>
    <string name="group_notification_for">This is the %s notification group.</string>
    <string name="desc_required">La descripción es un campo requerido</string>
    <string name="action_notify_administer_medication">com.example.myapplication.action.ADMINISTER_MEDICATION</string>
    <string name="created_reminder">Recordatorio creado: %s.</string>
    <string name="deleted_reminder">Recordatorio Eliminado: %s.</string>
    <string name="updated_reminder">Recordatorio Actualizado: %s.</string>
    <string name="cant_administer_medicine">No puede suministrar el medicamento antes de tiempo.</string>
    <string name="administer">Administrar</string>
    <string name="action_medicine_administered">com.example.myapplication.action.MEDICINE_ADMINISTERED</string>
    <string-array name="days">
        <item>Domingo</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
    </string-array>
    
</resources>